[gd_scene load_steps=9 format=3 uid="uid://cbcx0yg11h1xq"]

[ext_resource type="Shader" uid="uid://cccjkqsh3osro" path="res://common/backgrounds/move_uv.gdshader" id="1_fo2qw"]
[ext_resource type="Script" uid="uid://dej66d53qkio" path="res://common/screens/ability_selection_screen/ability_selection_screen.gd" id="1_upriw"]
[ext_resource type="Texture2D" uid="uid://mquidbki6n3p" path="res://common/backgrounds/art/diagonal_lines.png" id="2_wrvc2"]
[ext_resource type="PackedScene" uid="uid://b3f0ybtchurne" path="res://common/screens/ability_selection_screen/ability_selection_card.tscn" id="3_wrvc2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_upriw"]
shader = ExtResource("1_fo2qw")
shader_parameter/dir = Vector2(1, 1)
shader_parameter/speed = 0.10000000475

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrvc2"]
bg_color = Color(0.78818816, 0, 0.1897483, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upriw"]
bg_color = Color(0.9998526, 0.11866053, 0.26954314, 0.7294118)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80kri"]
bg_color = Color(0.30943933, 0.30943933, 0.30943933, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_right = 5.0
anti_aliasing = false

[node name="AbilitySelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
mouse_filter = 1
script = ExtResource("1_upriw")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.90000004)
material = SubResource("ShaderMaterial_upriw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wrvc2")
stretch_mode = 1

[node name="Overay" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.70000005)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.62764627, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[wave]Select an ability[/wave]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="AbilitySelectionCard" parent="MarginContainer/VBoxContainer/AbilityContainer" instance=ExtResource("3_wrvc2")]
layout_mode = 2

[node name="AbilitySelectionCard2" parent="MarginContainer/VBoxContainer/AbilityContainer" instance=ExtResource("3_wrvc2")]
layout_mode = 2

[node name="AbilitySelectionCard3" parent="MarginContainer/VBoxContainer/AbilityContainer" instance=ExtResource("3_wrvc2")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wrvc2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_upriw")
theme_override_styles/hover = SubResource("StyleBoxFlat_upriw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_80kri")
theme_override_styles/focus = SubResource("StyleBoxFlat_upriw")
text = "Select"

[node name="SkipButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wrvc2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_upriw")
theme_override_styles/hover = SubResource("StyleBoxFlat_upriw")
theme_override_styles/focus = SubResource("StyleBoxFlat_upriw")
text = "Skip"
flat = true
